# reply-robin

./: .gitignore  README.md  pyproject.toml
src/automated_email_matching_and_drafting/: .gitignore  crew.py  email_sync.py  emd.py  main.py
src/automated_email_matching_and_drafting/config/: agents.yaml  tasks.yaml
